--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Senin İsmin</title>
+  <title>knowhw</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <div class="hero">
-      <div class="photo"></div> <!-- Fotoğraf buraya eklenecek -->
-      <h1>Senin İsmin</h1>
-      <p>Yazılım geliştirici | Minimalist düşünür</p>
-      <div class="social">
-        <a href="#">GitHub</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">İletişim</a>
-      </div>
-    </div>
-    
-    <div class="about">
-      <h2>Hakkımda</h2>
-      <p>
-        Buraya kendin hakkında 2-3 cümlelik bir açıklama yazabilirsin. Örneğin neyle ilgileniyorsun, ne yapıyorsun, ne üretmekten keyif alırsın.
-      </p>
-    </div>
-  </div>
+  <header>
+    <h1>knowhw</h1>
+  </header>
+
+  <main>
+    <p>🇹🇷 🇺🇸 ✦<br><br>
+    Just a dev from Istanbul. AUZEF-trained.<br>
+    I mess with code, break stuff, fix it better.</p>
+  </main>
+
+  <footer>
+    <a href="https://github.com/knowhw" target="_blank">GitHub</a>
+    <a href="https://linkedin.com/in/knowhw" target="_blank">LinkedIn</a>
+  </footer>
 </body>
 </html>
