--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>knowhw</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>knowhw</h1>
-  </header>
-
-  <main>
-    <p>🇹🇷 🇺🇸 ✦<br><br>
-    Just a dev from Istanbul. AUZEF-trained.<br>
-    I mess with code, break stuff, fix it better.</p>
-  </main>
-
-  <footer>
-    <a href="https://github.com/knowhw" target="_blank">GitHub</a>
-    <a href="https://linkedin.com/in/knowhw" target="_blank">LinkedIn</a>
-  </footer>
+  <div class="card">
+    <div class="left">
+      <img src="profile.jpg" alt="Profile Photo">
+    </div>
+    <div class="right">
+      <h1>knowhw</h1>
+      <p>🇹🇷 🇺🇸 ✦</p>
+      <p>Just a dev from Istanbul. AUZEF-trained.<br>I mess with code, break stuff, fix it better.</p>
+      <div class="links">
+        <a href="https://github.com/knowhw" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/knowhw" target="_blank">LinkedIn</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
