--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>knowhw</title>
+  <title>N. METE</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="card">
+  <div class="container">
     <div class="left">
       <img src="profile.jpg" alt="Profile Photo">
     </div>
     <div class="right">
-      <h1>knowhw</h1>
-      <p>🇹🇷 🇺🇸 ✦</p>
-      <p>Just a dev from Istanbul. AUZEF-trained.<br>I mess with code, break stuff, fix it better.</p>
-      <div class="links">
-        <a href="https://github.com/knowhw" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/knowhw" target="_blank">LinkedIn</a>
+      <h1>N. METE</h1>
+      <p class="subtitle">Software Engineer, Consultant, Youtuber · Business inquiries? Contact me on LinkedIn.</p>
+      <p class="description">Engineering leader with experience in building hyper-productive teams and developing great talent.</p>
+      <div class="social">
+        <a href="https://youtube.com/" target="_blank">YouTube</a>
+        <a href="https://instagram.com/" target="_blank">Instagram</a>
+        <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
       </div>
     </div>
   </div>
