--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>N. METE</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="container">
     <div class="left">
-      <img src="profile.jpg" alt="Profile Photo">
+      <div class="photo-wrapper">
+        <img src="profile.jpg" alt="Profile Photo" />
+      </div>
     </div>
     <div class="right">
       <h1>N. METE</h1>
