--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -63,7 +63,7 @@
     .subtitle {
       font-size: 1.1rem;
       margin-top: 15px;
-      line-height: 1.4;
+      line-height: 1.6;
     }
 
     .description {
@@ -81,15 +81,30 @@
       text-decoration: none;
       margin-right: 20px;
       color: #000;
-      font-size: 28px; /* ikon boyutu */
+      font-size: 28px;
       transition: color 0.3s ease, transform 0.3s ease;
       display: inline-flex;
       align-items: center;
     }
 
     .social a:hover {
-      color: #0077b5; /* hoş mavi ton */
+      color: #0077b5;
       transform: scale(1.2);
+    }
+
+    .contact {
+      margin-top: 30px;
+      font-size: 0.95rem;
+    }
+
+    .contact a {
+      color: #0077b5;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
     }
 
     @media (max-width: 768px) {
@@ -127,16 +142,25 @@
     </div>
     <div class="right">
       <h1>N. METE</h1>
-      <p class="subtitle">Software Engineer, Consultant, Youtuber · Business inquiries? Contact me on LinkedIn.</p>
-      <p class="description">Engineering leader with experience in building hyper-productive teams and developing great talent.</p>
+      <p class="subtitle">
+        Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış bağımsız bir üreticiyim. Donanım ve sistem seviyesinde tasarım yapabiliyor, aynı zamanda yazılım geliştirici olarak projelere yön verebiliyorum.
+      </p>
+      <p class="description">
+        Sistemlerin sadece görünen yüzünü değil, arka plan mimarisini de oluşturuyorum. Donanım tasarımı (PCB) ve gömülü sistemlerden web tabanlı uygulamalara kadar geniş bir yelpazede üretim yapabiliyorum. Yazılım tarafım ön planda olmak üzere; ürün geliştirme süreçlerine uçtan uca katkı sağlıyorum. YouTube ve Instagram'a içerik üretmeye yeni başladım.
+      </p>
+      <div class="contact">
+        İletişim için: 
+        <a href="mailto:nuriozdas@outlook.com">nuriozdas@outlook.com</a> ·
+        <a href="https://www.linkedin.com/in/nurimete/" target="_blank">LinkedIn Profilim</a>
+      </div>
       <div class="social">
-        <a href="https://youtube.com/" target="_blank" aria-label="YouTube">
+        <a href="https://www.youtube.com/@yazlmdunyas3403" target="_blank" aria-label="YouTube">
           <i class="fab fa-youtube"></i>
         </a>
         <a href="https://instagram.com/" target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/nurimete/" target="_blank" aria-label="LinkedIn">
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
