--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>N. METE</title>
-  
+
+  <!-- Google Font: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
   <!-- Font Awesome CDN -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
   <style>
     * {
@@ -18,15 +18,17 @@
       box-sizing: border-box;
     }
 
-    body, html {
+    html, body {
       height: 100%;
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #000000, #ffffff);
     }
 
     .container {
       display: flex;
       height: 100vh;
       width: 100%;
+      color: #111;
     }
 
     .left {
@@ -38,17 +40,17 @@
     }
 
     .left img {
-      width: 200px;
-      height: 200px;
+      width: 220px;
+      height: 220px;
       object-fit: cover;
-      border-radius: 100px;
-      border: 3px solid white;
+      border-radius: 50%;
+      border: 4px solid #fff;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
 
     .right {
       background-color: #fff;
       flex: 1;
-      color: #111;
       padding: 80px 60px;
       display: flex;
       flex-direction: column;
@@ -56,12 +58,13 @@
     }
 
     .right h1 {
-      font-size: 2.8rem;
-      font-weight: bold;
+      font-size: 3rem;
+      font-weight: 700;
+      color: #000;
     }
 
     .subtitle {
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       margin-top: 15px;
       line-height: 1.6;
     }
@@ -69,7 +72,30 @@
     .description {
       margin-top: 25px;
       font-size: 1rem;
-      color: #333;
+      color: #444;
+      line-height: 1.7;
+    }
+
+    .contact {
+      margin-top: 30px;
+      font-size: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+    .contact a {
+      color: #000;
+      text-decoration: none;
+      font-weight: 600;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .contact a:hover {
+      color: #0077b5;
     }
 
     .social {
@@ -92,21 +118,6 @@
       transform: scale(1.2);
     }
 
-    .contact {
-      margin-top: 30px;
-      font-size: 0.95rem;
-    }
-
-    .contact a {
-      color: #0077b5;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .contact a:hover {
-      text-decoration: underline;
-    }
-
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
@@ -125,6 +136,10 @@
       .left img {
         width: 140px;
         height: 140px;
+      }
+
+      .right h1 {
+        font-size: 2.2rem;
       }
 
       .social a {
@@ -149,9 +164,12 @@
         Sistemlerin sadece görünen yüzünü değil, arka plan mimarisini de oluşturuyorum. Donanım tasarımı (PCB) ve gömülü sistemlerden web tabanlı uygulamalara kadar geniş bir yelpazede üretim yapabiliyorum. Yazılım tarafım ön planda olmak üzere; ürün geliştirme süreçlerine uçtan uca katkı sağlıyorum. YouTube ve Instagram'a içerik üretmeye yeni başladım.
       </p>
       <div class="contact">
-        İletişim için: 
-        <a href="mailto:nuriozdas@outlook.com">nuriozdas@outlook.com</a> ·
-        <a href="https://www.linkedin.com/in/nurimete/" target="_blank">LinkedIn Profilim</a>
+        <a href="mailto:nuriozdas@outlook.com">
+          <i class="fas fa-envelope"></i> nuriozdas@outlook.com
+        </a>
+        <a href="https://www.linkedin.com/in/nurimete/" target="_blank">
+          <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
       </div>
       <div class="social">
         <a href="https://www.youtube.com/@yazlmdunyas3403" target="_blank" aria-label="YouTube">
