--- a/index.html
+++ b/index.html
@@ -76,38 +76,16 @@
       line-height: 1.7;
     }
 
-    .contact {
-      margin-top: 30px;
-      font-size: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 15px;
-    }
-
-    .contact a {
-      color: #000;
-      text-decoration: none;
-      font-weight: 600;
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .contact a:hover {
-      color: #0077b5;
-    }
-
     .social {
-      margin-top: auto;
-      padding-top: 40px;
+      margin-top: 40px;
+      display: flex;
+      gap: 25px;
+      font-size: 26px;
     }
 
     .social a {
       text-decoration: none;
-      margin-right: 20px;
       color: #000;
-      font-size: 28px;
       transition: color 0.3s ease, transform 0.3s ease;
       display: inline-flex;
       align-items: center;
@@ -142,8 +120,9 @@
         font-size: 2.2rem;
       }
 
-      .social a {
+      .social {
         font-size: 22px;
+        gap: 20px;
       }
     }
   </style>
@@ -156,21 +135,16 @@
       </div>
     </div>
     <div class="right">
-      <h1>N. METE</h1>
-      <p class="subtitle">
-        Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış bağımsız bir üreticiyim. Donanım ve sistem seviyesinde tasarım yapabiliyor, aynı zamanda yazılım geliştirici olarak projelere yön verebiliyorum.
-      </p>
-      <p class="description">
-        Sistemlerin sadece görünen yüzünü değil, arka plan mimarisini de oluşturuyorum. Donanım tasarımı (PCB) ve gömülü sistemlerden web tabanlı uygulamalara kadar geniş bir yelpazede üretim yapabiliyorum. Yazılım tarafım ön planda olmak üzere; ürün geliştirme süreçlerine uçtan uca katkı sağlıyorum. YouTube ve Instagram'a içerik üretmeye yeni başladım.
-      </p>
-      <div class="contact">
-        <a href="mailto:nuriozdas@outlook.com">
-          <i class="fas fa-envelope"></i> nuriozdas@outlook.com
-        </a>
-        <a href="https://www.linkedin.com/in/nurimete/" target="_blank">
-          <i class="fab fa-linkedin"></i> LinkedIn
-        </a>
+      <div>
+        <h1>N. METE</h1>
+        <p class="subtitle">
+          Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış bağımsız bir üreticiyim. Donanım ve sistem seviyesinde tasarım yapabiliyor, aynı zamanda yazılım geliştirici olarak projelere yön verebiliyorum.
+        </p>
+        <p class="description">
+          Sistemlerin sadece görünen yüzünü değil, arka plan mimarisini de oluşturuyorum. Donanım tasarımı (PCB) ve gömülü sistemlerden web tabanlı uygulamalara kadar geniş bir yelpazede üretim yapabiliyorum. Yazılım tarafım ön planda olmak üzere; ürün geliştirme süreçlerine uçtan uca katkı sağlıyorum. YouTube ve Instagram'a içerik üretmeye yeni başladım.
+        </p>
       </div>
+
       <div class="social">
         <a href="https://www.youtube.com/@yazlmdunyas3403" target="_blank" aria-label="YouTube">
           <i class="fab fa-youtube"></i>
@@ -180,6 +154,9 @@
         </a>
         <a href="https://www.linkedin.com/in/nurimete/" target="_blank" aria-label="LinkedIn">
           <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="mailto:nuriozdas@outlook.com" aria-label="Email">
+          <i class="fas fa-envelope"></i>
         </a>
       </div>
     </div>
