--- a/index.html
+++ b/index.html
@@ -1,165 +1,19 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>N. METE</title>
+<p class="description">
+  Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim. Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum. <br><br>
 
-  <!-- Google Font: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  PCB devre kartı tasarımı, programlanması ve donanım entegrasyonu konularında tecrübeliyim. Web, masaüstü (PC) ve Android platformlarında yazılım geliştirme yaparken; hem alt seviye (donanım yakın) hem de üst seviye (kullanıcıya dönük) programlama bilgisine sahibim. <br><br>
 
-  <!-- Font Awesome CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme altyapıları kurabiliyorum. Gömülü sistemlerden uçtan uca ürün çözümlerine kadar geniş bir yelpazede geliştirme yapıyor, donanım ve yazılımın entegre çalıştığı projelere değer katıyorum. <br><br>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  YouTube ve Instagram’da içerik üretmeye yeni başladım.  
+  İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.
+</p>
 
-    html, body {
-      height: 100%;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #000000, #ffffff);
-    }
-
-    .container {
-      display: flex;
-      height: 100vh;
-      width: 100%;
-      color: #111;
-    }
-
-    .left {
-      background-color: #000;
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .left img {
-      width: 220px;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 4px solid #fff;
-      box-shadow: 0 0 20px rgba(255,255,255,0.2);
-    }
-
-    .right {
-      background-color: #fff;
-      flex: 1;
-      padding: 80px 60px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .right h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      color: #000;
-    }
-
-    .subtitle {
-      font-size: 1.15rem;
-      margin-top: 15px;
-      line-height: 1.6;
-    }
-
-    .description {
-      margin-top: 25px;
-      font-size: 1rem;
-      color: #444;
-      line-height: 1.7;
-    }
-
-    .social {
-      margin-top: 40px;
-      display: flex;
-      gap: 25px;
-      font-size: 26px;
-    }
-
-    .social a {
-      text-decoration: none;
-      color: #000;
-      transition: color 0.3s ease, transform 0.3s ease;
-      display: inline-flex;
-      align-items: center;
-    }
-
-    .social a:hover {
-      color: #0077b5;
-      transform: scale(1.2);
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-      }
-
-      .left, .right {
-        flex: none;
-        width: 100%;
-        height: auto;
-      }
-
-      .right {
-        padding: 40px 30px;
-      }
-
-      .left img {
-        width: 140px;
-        height: 140px;
-      }
-
-      .right h1 {
-        font-size: 2.2rem;
-      }
-
-      .social {
-        font-size: 22px;
-        gap: 20px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="left">
-      <div class="photo-wrapper">
-        <img src="profile.jpg" alt="Profile Photo" />
-      </div>
-    </div>
-    <div class="right">
-      <div>
-        <h1>N. METE</h1>
-        <p class="subtitle">
-          Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış bağımsız bir üreticiyim. Donanım ve sistem seviyesinde tasarım yapabiliyor, aynı zamanda yazılım geliştirici olarak projelere yön verebiliyorum.
-        </p>
-        <p class="description">
-          Sistemlerin sadece görünen yüzünü değil, arka plan mimarisini de oluşturuyorum. Donanım tasarımı (PCB) ve gömülü sistemlerden web tabanlı uygulamalara kadar geniş bir yelpazede üretim yapabiliyorum. Yazılım tarafım ön planda olmak üzere; ürün geliştirme süreçlerine uçtan uca katkı sağlıyorum. YouTube ve Instagram'a içerik üretmeye yeni başladım.
-        </p>
-      </div>
-
-      <div class="social">
-        <a href="https://www.youtube.com/@yazlmdunyas3403" target="_blank" aria-label="YouTube">
-          <i class="fab fa-youtube"></i>
-        </a>
-        <a href="https://instagram.com/" target="_blank" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/nurimete/" target="_blank" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="mailto:nuriozdas@outlook.com" aria-label="Email">
-          <i class="fas fa-envelope"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
+<ul class="description">
+  <li>1. PCB devre kartı tasarımı</li>
+  <li>2. Ürün tasarımı</li>
+  <li>3. PCB devre kartı programlama</li>
+  <li>4. Alt ve üst seviye programlama deneyimi</li>
+  <li>5. Sistem, web, PC ve Android seviyesinde yazılım geliştirme</li>
+  <li>6. Bluetooth, Wi-Fi ve internet protokolleri ile haberleşme altyapısı kurma</li>
+</ul>
