--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
     }
 
     html, body {
-      height: 100%;
+      min-height: 100%;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(to right, #000000, #ffffff);
+      overflow-x: hidden;
     }
 
     .container {
       display: flex;
-      height: 100vh;
+      flex-wrap: wrap;
+      min-height: 100vh;
       width: 100%;
       color: #111;
     }
@@ -34,9 +36,11 @@
     .left {
       background-color: #000;
       flex: 1;
+      min-width: 300px;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 40px 0;
     }
 
     .left img {
@@ -45,14 +49,15 @@
       object-fit: cover;
       border-radius: 50%;
       border: 4px solid #fff;
-      box-shadow: 0 0 20px rgba(255,255,255,0.2);
       filter: grayscale(100%);
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
 
     .right {
       background-color: #fff;
       flex: 1;
-      padding: 80px 60px;
+      min-width: 300px;
+      padding: 60px 40px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
