--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 40px 0;
+      padding: 40px 20px;
+      color: #fff;
     }
 
     .left img {
@@ -52,22 +53,28 @@
       border: 4px solid #fff;
       filter: grayscale(100%);
       box-shadow: 0 0 20px rgba(255,255,255,0.2);
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+    }
+
+    .left h2 {
+      font-size: 1.8rem;
+      font-weight: 600;
+      margin-bottom: 20px;
+      text-align: center;
     }
 
     .social {
       display: flex;
-      gap: 25px;
+      gap: 20px;
       font-size: 26px;
-      margin-top: 20px;
+      justify-content: center;
+      margin-top: 10px;
     }
 
     .social a {
       text-decoration: none;
       color: #fff;
       transition: color 0.3s ease, transform 0.3s ease;
-      display: inline-flex;
-      align-items: center;
     }
 
     .social a:hover {
@@ -129,8 +136,8 @@
       }
 
       .left img {
-        width: 140px;
-        height: 140px;
+        width: 160px;
+        height: 160px;
       }
 
       .right h1 {
@@ -139,7 +146,7 @@
 
       .social {
         font-size: 22px;
-        gap: 20px;
+        gap: 15px;
       }
     }
   </style>
@@ -148,6 +155,7 @@
   <div class="container">
     <div class="left">
       <img src="profile.jpg" alt="Profil Fotoğrafı" />
+      <h2>N. METE</h2>
       <div class="social">
         <a href="https://www.youtube.com/@yazlmdunyas3403" target="_blank" aria-label="YouTube">
           <i class="fab fa-youtube"></i>
@@ -166,7 +174,7 @@
 
     <div class="right">
       <div>
-        <h1>N. METE</h1>
+        <h1>Hakkımda</h1>
         <p class="subtitle">
           Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim.
           Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.
