--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
           İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.
         </p>
         <ul class="description">
-          <li>1. PCB devre kartı tasarımı</li>
-          <li>2. Ürün tasarımı</li>
-          <li>3. PCB devre kartı programlama</li>
-          <li>4. Alt ve üst seviye programlama deneyimi</li>
-          <li>5. Sistem, web, PC ve Android seviyesinde yazılım geliştirme</li>
-          <li>6. Bluetooth, Wi-Fi ve internet protokolleri ile haberleşme altyapısı kurma</li>
+          <li>1PCB devre kartı tasarımı</li>
+          <li>Ürün tasarımı</li>
+          <li>PCB devre kartı programlama</li>
+          <li>Alt ve üst seviye programlama deneyimi</li>
+          <li>Sistem, web, PC ve Android seviyesinde yazılım geliştirme</li>
+          <li>Bluetooth, Wi-Fi ve internet protokolleri ile haberleşme</li>
         </ul>
       </div>
     </div>
