--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
           İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.
         </p>
         <ul class="description">
-          <li>1PCB devre kartı tasarımı</li>
-          <li>Ürün tasarımı</li>
+          <li>PCB devre kartı tasarımı</li>
           <li>PCB devre kartı programlama</li>
+          <li>Ürün tasarımı</li>
           <li>Alt ve üst seviye programlama deneyimi</li>
           <li>Sistem, web, PC ve Android seviyesinde yazılım geliştirme</li>
           <li>Bluetooth, Wi-Fi ve internet protokolleri ile haberleşme</li>
