--- a/index.html
+++ b/index.html
@@ -181,12 +181,11 @@
         </p>
         <p class="description">
           PCB devre kartı tasarımı, programlanması ve donanım entegrasyonu konularında tecrübeliyim.
-          Web, masaüstü (PC) ve Android platformlarında yazılım geliştirme yaparken;
-          hem alt seviye (donanım yakın) hem de üst seviye (kullanıcıya dönük) programlama bilgisine sahibim.<br><br>
-          Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme altyapıları kurabiliyorum.
-          Gömülü sistemlerden uçtan uca ürün çözümlerine kadar geniş bir yelpazede geliştirme yapıyor,
-          donanım ve yazılımın entegre çalıştığı projelere değer katıyorum.<br><br>
-          YouTube ve Instagram’da içerik üretmeye yeni başladım.<br>
+          Web, masaüstü ve Android platformlarında yazılım geliştirme yaparken;
+          alt seviye & üst seviye programlama bilgisine sahibim.<br><br>
+          Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme
+          uçtan uca çözümlerle projelere değer katıyorum.<br><br>
+          Ayrıyeten YouTube da içerik üretmeyi planlıyorum<br>
           İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.
         </p>
         <ul class="description">
