--- a/index.html
+++ b/index.html
@@ -178,16 +178,21 @@
         <p class="description">
           PCB devre kartı tasarımı, programlanması ve donanım entegrasyonu konularında tecrübeliyim.
           Web, masaüstü ve Android platformlarında yazılım geliştirme yaparken;
-          alt seviye & üst seviye programlama bilgisine sahibim.<br><br>
+          alt seviye & üst seviye programlama bilgisine sahibim.
+           </p>
+         <br><br>
+        <p class="subtitle">
+          Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim.
+          Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.
+        </p>
+         
+        <p class="description">
           Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme
           uçtan uca çözümlerle projelere değer katıyorum.<br><br>
           Ayrıyeten YouTube da içerik üretmeyi planlıyorum<br>
           İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.
         </p>
-        <p class="subtitle">
-          Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim.
-          Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.
-        </p>
+
         <ul class="description">
           <li>PCB devre kartı tasarımı</li>
           <li>PCB devre kartı programlama</li>
