--- a/index.html
+++ b/index.html
@@ -12,17 +12,36 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     html, body {
       min-height: 100%;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(to right, #000000, #ffffff);
       overflow-x: hidden;
+    }
+
+    .language-switch {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      z-index: 10;
+    }
+
+    .language-switch button {
+      margin-left: 10px;
+      padding: 5px 12px;
+      font-size: 14px;
+      border: none;
+      border-radius: 4px;
+      background-color: #111;
+      color: #fff;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .language-switch button:hover {
+      background-color: #333;
     }
 
     .container {
@@ -43,6 +62,7 @@
       align-items: center;
       padding: 40px 20px;
       color: #fff;
+      position: relative;
     }
 
     .left img {
@@ -54,6 +74,7 @@
       filter: grayscale(100%);
       box-shadow: 0 0 20px rgba(255,255,255,0.2);
       margin-bottom: 20px;
+      object-position: top;
     }
 
     .left h2 {
@@ -89,7 +110,6 @@
       padding: 60px 40px;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
     }
 
     .right h1 {
@@ -98,24 +118,14 @@
       color: #000;
     }
 
-    .subtitle {
-      font-size: 1.15rem;
-      margin-top: 15px;
-      line-height: 1.6;
-    }
-
-    .description {
-      margin-top: 25px;
+    .subtitle, .description, ul.description {
       font-size: 1rem;
       color: #444;
       line-height: 1.7;
+      margin-top: 15px;
     }
 
     ul.description {
-      margin-top: 20px;
-      color: #333;
-      font-size: 1rem;
-      line-height: 1.6;
       list-style-type: disc;
       padding-left: 20px;
     }
@@ -123,16 +133,6 @@
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
-      }
-
-      .left, .right {
-        flex: none;
-        width: 100%;
-        height: auto;
-      }
-
-      .right {
-        padding: 40px 30px;
       }
 
       .left img {
@@ -152,48 +152,47 @@
   </style>
 </head>
 <body>
+
+  <div class="language-switch">
+    <button onclick="setLanguage('tr')">TR</button>
+    <button onclick="setLanguage('en')">EN</button>
+  </div>
+
   <div class="container">
     <div class="left">
       <img src="profile.jpg" alt="Profil Fotoğrafı" />
       <h2>N. METE</h2>
       <div class="social">
-        <a href="https://www.youtube.com/@yazlmdunyas3403" target="_blank" aria-label="YouTube">
-          <i class="fab fa-youtube"></i>
-        </a>
-        <a href="https://instagram.com/" target="_blank" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/nurimete/" target="_blank" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="mailto:nuriozdas@outlook.com" aria-label="Email">
-          <i class="fas fa-envelope"></i>
-        </a>
+        <a href="https://www.youtube.com/@yazlmdunyas3403" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nurimete/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:nuriozdas@outlook.com"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
 
     <div class="right">
       <div>
-        <h1>Hakkımda</h1>
-        <p class="description">
+        <h1 id="title">Hakkımda</h1>
+
+        <p class="description" id="desc1">
           PCB devre kartı tasarımı, programlanması ve donanım entegrasyonu konularında tecrübeliyim.
           Web, masaüstü ve Android platformlarında yazılım geliştirme yaparken;
           alt seviye & üst seviye programlama bilgisine sahibim.
-           </p>
-    
-        <p class="subtitle">
+        </p>
+
+        <p class="subtitle" id="desc2">
           Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim.
           Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.
         </p>
-         
-        <p class="description">
+
+        <p class="description" id="desc3">
           Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme
           uçtan uca çözümlerle projelere değer katıyorum.<br><br>
           Ayrıyeten YouTube da içerik üretmeyi planlıyorum<br>
           İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.
         </p>
 
-        <ul class="description">
+        <ul class="description" id="skills">
           <li>PCB devre kartı tasarımı</li>
           <li>PCB devre kartı programlama</li>
           <li>Ürün tasarımı</li>
@@ -204,5 +203,54 @@
       </div>
     </div>
   </div>
+
+  <script>
+    const content = {
+      tr: {
+        title: "Hakkımda",
+        desc1: "PCB devre kartı tasarımı, programlanması ve donanım entegrasyonu konularında tecrübeliyim. Web, masaüstü ve Android platformlarında yazılım geliştirme yaparken; alt seviye & üst seviye programlama bilgisine sahibim.",
+        desc2: "Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim. Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.",
+        desc3: "Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme uçtan uca çözümlerle projelere değer katıyorum.<br><br>Ayrıyeten YouTube da içerik üretmeyi planlıyorum<br>İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.",
+        skills: [
+          "PCB devre kartı tasarımı",
+          "PCB devre kartı programlama",
+          "Ürün tasarımı",
+          "Alt ve üst seviye programlama deneyimi",
+          "Sistem, web, PC ve Android seviyesinde yazılım geliştirme",
+          "Bluetooth, Wi-Fi ve internet protokolleri ile haberleşme"
+        ]
+      },
+      en: {
+        title: "About Me",
+        desc1: "I have experience in PCB circuit board design, programming, and hardware integration. I develop software for web, desktop, and Android platforms, with knowledge in both low-level and high-level programming.",
+        desc2: "I am a freelance maker specialized in product design, PCB development, and software. As a software developer, I can contribute not only to the interface but also to the entire system architecture.",
+        desc3: "I create end-to-end communication solutions using Bluetooth, Wi-Fi, and internet protocols.<br><br>I've recently started creating content on YouTube.<br>You can reach me via my LinkedIn profile or email address.",
+        skills: [
+          "PCB circuit board design",
+          "PCB board programming",
+          "Product design",
+          "Experience in low- and high-level programming",
+          "Software development for system, web, PC, and Android",
+          "Communication via Bluetooth, Wi-Fi, and internet protocols"
+        ]
+      }
+    };
+
+    function setLanguage(lang) {
+      document.getElementById("title").textContent = content[lang].title;
+      document.getElementById("desc1").textContent = content[lang].desc1;
+      document.getElementById("desc2").textContent = content[lang].desc2;
+      document.getElementById("desc3").innerHTML = content[lang].desc3;
+
+      const skillsList = document.getElementById("skills");
+      skillsList.innerHTML = "";
+      content[lang].skills.forEach(skill => {
+        const li = document.createElement("li");
+        li.textContent = skill;
+        skillsList.appendChild(li);
+      });
+    }
+  </script>
+
 </body>
 </html>
