--- a/index.html
+++ b/index.html
@@ -7,30 +7,28 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <!-- Font Awesome CDN -->
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-
     html, body {
-      min-height: 100%;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(to right, #000000, #ffffff);
       overflow-x: hidden;
+      min-height: 100vh;
     }
 
     .language-switch {
       position: absolute;
       top: 20px;
-      right: 30px;
+      right: 20px;
       z-index: 10;
     }
 
     .language-switch button {
-      margin-left: 10px;
-      padding: 5px 12px;
+      margin-left: 5px;
+      padding: 6px 12px;
       font-size: 14px;
       border: none;
       border-radius: 4px;
@@ -41,7 +39,7 @@
     }
 
     .language-switch button:hover {
-      background-color: #333;
+      background-color: #444;
     }
 
     .container {
@@ -62,19 +60,18 @@
       align-items: center;
       padding: 40px 20px;
       color: #fff;
-      position: relative;
     }
 
     .left img {
       width: 220px;
       height: 220px;
       object-fit: cover;
+      object-position: top;
       border-radius: 50%;
       border: 4px solid #fff;
       filter: grayscale(100%);
       box-shadow: 0 0 20px rgba(255,255,255,0.2);
       margin-bottom: 20px;
-      object-position: top;
     }
 
     .left h2 {
@@ -110,6 +107,7 @@
       padding: 60px 40px;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
     }
 
     .right h1 {
@@ -118,14 +116,18 @@
       color: #000;
     }
 
-    .subtitle, .description, ul.description {
+    .subtitle, .description {
+      margin-top: 20px;
       font-size: 1rem;
       color: #444;
       line-height: 1.7;
-      margin-top: 15px;
     }
 
     ul.description {
+      margin-top: 20px;
+      color: #333;
+      font-size: 1rem;
+      line-height: 1.6;
       list-style-type: disc;
       padding-left: 20px;
     }
@@ -133,6 +135,16 @@
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
+      }
+
+      .left, .right {
+        flex: none;
+        width: 100%;
+        height: auto;
+      }
+
+      .right {
+        padding: 40px 30px;
       }
 
       .left img {
@@ -152,10 +164,9 @@
   </style>
 </head>
 <body>
-
   <div class="language-switch">
-    <button onclick="setLanguage('tr')">TR</button>
-    <button onclick="setLanguage('en')">EN</button>
+    <button onclick="setLang('tr')">TR</button>
+    <button onclick="setLang('en')">EN</button>
   </div>
 
   <div class="container">
@@ -171,28 +182,24 @@
     </div>
 
     <div class="right">
-      <div>
-        <h1 id="title">Hakkımda</h1>
-
-        <p class="description" id="desc1">
+      <div id="content-tr">
+        <h1>Hakkımda</h1>
+        <p class="description">
           PCB devre kartı tasarımı, programlanması ve donanım entegrasyonu konularında tecrübeliyim.
           Web, masaüstü ve Android platformlarında yazılım geliştirme yaparken;
           alt seviye & üst seviye programlama bilgisine sahibim.
         </p>
-
-        <p class="subtitle" id="desc2">
+        <p class="subtitle">
           Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim.
           Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.
         </p>
-
-        <p class="description" id="desc3">
+        <p class="description">
           Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme
           uçtan uca çözümlerle projelere değer katıyorum.<br><br>
-          Ayrıyeten YouTube da içerik üretmeyi planlıyorum<br>
+          Ayrıyeten YouTube ve Instagram'da içerik üretmeye yeni başladım.<br>
           İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.
         </p>
-
-        <ul class="description" id="skills">
+        <ul class="description">
           <li>PCB devre kartı tasarımı</li>
           <li>PCB devre kartı programlama</li>
           <li>Ürün tasarımı</li>
@@ -201,56 +208,38 @@
           <li>Bluetooth, Wi-Fi ve internet protokolleri ile haberleşme</li>
         </ul>
       </div>
+
+      <div id="content-en" style="display:none;">
+        <h1>About Me</h1>
+        <p class="description">
+          I have experience in PCB circuit design, programming, and hardware integration.
+          I develop software on web, desktop, and Android platforms with knowledge in both low-level and high-level programming.
+        </p>
+        <p class="subtitle">
+          As a freelance maker specialized in product design, PCB development, and software, I contribute to projects from end to end — with a strong focus on software.
+        </p>
+        <p class="description">
+          I add value to projects by enabling communication over Bluetooth, Wi-Fi, and internet protocols.<br><br>
+          I’ve recently started creating content on YouTube and Instagram.<br>
+          For inquiries, feel free to reach out via LinkedIn or email.
+        </p>
+        <ul class="description">
+          <li>PCB circuit design</li>
+          <li>PCB circuit programming</li>
+          <li>Product design</li>
+          <li>Experience in both low- and high-level programming</li>
+          <li>Software development for system, web, PC, and Android</li>
+          <li>Communication over Bluetooth, Wi-Fi, and internet protocols</li>
+        </ul>
+      </div>
     </div>
   </div>
 
   <script>
-    const content = {
-      tr: {
-        title: "Hakkımda",
-        desc1: "PCB devre kartı tasarımı, programlanması ve donanım entegrasyonu konularında tecrübeliyim. Web, masaüstü ve Android platformlarında yazılım geliştirme yaparken; alt seviye & üst seviye programlama bilgisine sahibim.",
-        desc2: "Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim. Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.",
-        desc3: "Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme uçtan uca çözümlerle projelere değer katıyorum.<br><br>Ayrıyeten YouTube da içerik üretmeyi planlıyorum<br>İletişim için LinkedIn profilim ya da e-posta adresim üzerinden ulaşabilirsiniz.",
-        skills: [
-          "PCB devre kartı tasarımı",
-          "PCB devre kartı programlama",
-          "Ürün tasarımı",
-          "Alt ve üst seviye programlama deneyimi",
-          "Sistem, web, PC ve Android seviyesinde yazılım geliştirme",
-          "Bluetooth, Wi-Fi ve internet protokolleri ile haberleşme"
-        ]
-      },
-      en: {
-        title: "About Me",
-        desc1: "I have experience in PCB circuit board design, programming, and hardware integration. I develop software for web, desktop, and Android platforms, with knowledge in both low-level and high-level programming.",
-        desc2: "I am a freelance maker specialized in product design, PCB development, and software. As a software developer, I can contribute not only to the interface but also to the entire system architecture.",
-        desc3: "I create end-to-end communication solutions using Bluetooth, Wi-Fi, and internet protocols.<br><br>I've recently started creating content on YouTube.<br>You can reach me via my LinkedIn profile or email address.",
-        skills: [
-          "PCB circuit board design",
-          "PCB board programming",
-          "Product design",
-          "Experience in low- and high-level programming",
-          "Software development for system, web, PC, and Android",
-          "Communication via Bluetooth, Wi-Fi, and internet protocols"
-        ]
-      }
-    };
-
-    function setLanguage(lang) {
-      document.getElementById("title").textContent = content[lang].title;
-      document.getElementById("desc1").textContent = content[lang].desc1;
-      document.getElementById("desc2").textContent = content[lang].desc2;
-      document.getElementById("desc3").innerHTML = content[lang].desc3;
-
-      const skillsList = document.getElementById("skills");
-      skillsList.innerHTML = "";
-      content[lang].skills.forEach(skill => {
-        const li = document.createElement("li");
-        li.textContent = skill;
-        skillsList.appendChild(li);
-      });
+    function setLang(lang) {
+      document.getElementById("content-tr").style.display = lang === "tr" ? "block" : "none";
+      document.getElementById("content-en").style.display = lang === "en" ? "block" : "none";
     }
   </script>
-
 </body>
 </html>
