--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </p>
         <p class="subtitle">
           Ürün tasarımı, PCB devre geliştirme ve yazılım alanlarında uzmanlaşmış serbest bir üreticiyim.
-          Yazılım geliştirici kimliğimle projelere sadece arayüz değil, sistemin tüm katmanlarına dokunarak yön verebiliyorum.
+          Yazılım geliştirici kimliğimle projelere sadece arayüz değil, projenin tüm katmanlari ve asamalarina yön verebiliyorum.
         </p>
         <p class="description">
           Bluetooth, Wi-Fi ve internet protokolleri üzerinden cihazlar arası haberleşme
